--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
     "mysql2": "^3.11.3",
+    "path": "^0.12.7",
     "sequelize": "^6.37.5"
   }
 }
