--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.21.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "path": "^0.12.7",
     "sequelize": "^6.37.5"
