Mensagem do commit

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "path": "^0.12.7",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1"
   }
 }
